--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <a href="#popupContent" data-rel="popup" data-position-to="window" data-inline='true' data-role="button" data-theme="a" data-content-theme="a">Content</a>
                 </li>
                 <li>
-                    <a href="#popupProgress" data-rel="popup" data-position-to="window" data-inline='true' data-role="button" data-theme="a" data-content-theme="a">progress</a>
+                    <a href="#popupProgress" data-rel="popup" data-position-to="window" data-inline='true' data-role="button" data-theme="a" data-content-theme="a">Progress</a>
                 </li>
                 <li>
                     <a href="#popupExercises" data-rel="popup" data-position-to="window" data-inline='true' data-role="button" data-theme="a" data-content-theme="a">Exercises</a>
