--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <a href="#popupProgress" data-rel="popup" data-position-to="window" data-inline='true' data-role="button" data-theme="a" data-content-theme="a">Progress</a>
                 </li>
                 <li>
-                    <a href="#popupExercises" data-rel="popup" data-position-to="window" data-inline='true' data-role="button" data-theme="a" data-content-theme="a">Exercises</a>
+                    <a href="#popupExercises" data-rel="popup" data-position-to="window">Exercises</a>
                 </li>
             </ul>
         </div><!-- /navbar -->
