--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             localStorage.clear();
             alert("Storage cleared");
                         console.log('starting')
-            window.plugin.notification.local.add({ message: 'Great app!' });
+            navigator.notification.vibrate(2500);
         console.log('ending')
         }
 
