--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
     <script src="lib/jquery.mobile-1.3.2.min.js"></script>
     <script src='js/exercises.js'></script>
+    <script src="phonegap.js"></script>
+    <script src="device.js"></script>
+    <script src="local-notification.js"></script>
 </head>
 
 <body>
@@ -141,9 +144,9 @@
         function clear_Storage() {
             localStorage.clear();
             alert("Storage cleared");
-                        console.log('starting')
-            navigator.notification.vibrate(2500);
-        console.log('ending')
+            console.log('starting')
+            window.plugin.notification.local.add({ message: 'Great app!' });
+            console.log('ending')
         }
 
         function getRealContentHeight() {
