--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </ul>
     </div>
 
-    <div data-role="header" style='position:absolute;bottom: 0;width:100%;'>
+    <div data-role="header" style='position:absolute;top: 0;width:100%;'>
         <div data-role="navbar">
             <ul>
                 <li>
