--- a/index.html
+++ b/index.html
@@ -67,44 +67,99 @@
             </li>
     </div>
 
-
-    <div data-role="popup" id="popupContent" data-theme="a">
+  <div data-role="popup" id="popupContent" data-theme="a">
         <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
         <ul data-role="listview" data-inset="true" style="min-width:210px;" data-theme="a">
-            <li data-role="divider" data-theme="a">Content</li>
+
+            <li data-role="divider" data-theme="a">What is Social Anxiety? </li>
             <li>
                 <a href="sections/section_1.html">
-                    <p>Defining Shyness and Social Anxiety</p>
+                    <p>Introduction</p>
                 </a>
             </li>
             <li>
                 <a href="sections/section_2.html">
-                    <p>Types of Anxious Thinking</p>
+                    <p>Defining Shyness and Social Anxiety</p>
                 </a>
             </li>
             <li>
                 <a href="sections/section_3.html">
-                    <p>Defusing from Your Social-Anxiety Thoughts</p>
+                    <p>Fusion vs. Defusion</p>
                 </a>
             </li>
+
+            <li data-role="divider" data-theme="a">Anxious Thinking</li>
             <li>
                 <a href="sections/section_4.html">
-                    <p>Developing Awareness of Thinking</p>
+                    <p>Types of Anxious Thoughts</p>
                 </a>
             </li>
             <li>
                 <a href="sections/section_5.html">
-                    <p>Summary of Defusion Strategies</p>
+                    <p>Types of Anxious Thoughts Cont’d</p>
                 </a>
             </li>
             <li>
-
                 <a href="sections/section_6.html">
-                    <p>Conclusion</p>
+                    <p>Your Types of Anxious Thinking</p>
                 </a>
             </li>
+
+            <li data-role="divider" data-theme="a">Defusing from Your Socially Anxious Thoughts</li>
+            <li>
+                <a href="sections/section_4.html">
+                    <p>Defusion Strategies </p>
+                </a>
+            </li>
+            <li>
+                <a href="sections/section_5.html">
+                    <p>Defusion Strategies Cont’d</p>
+                </a>
+            </li>
+
+            <li data-role="divider" data-theme="a">Awareness of Thinking</li>
+            <li>
+                <a href="sections/section_4.html">
+                    <p>Developing Your Awareness of Thinking</p>
+                </a>
+            </li>
+            <li>
+                <a href="sections/section_5.html">
+                    <p>Exercise 5: Awareness of Thinking</p>
+                </a>
+            </li>
+            <li>
+                <a href="sections/section_5.html">
+                    <p>Thought Watching Metaphors</p>
+                </a>
+            </li>
+            <li>
+                <a href="sections/section_5.html">
+                    <p>Waterfall Metaphor </p>
+                </a>
+            </li>
+            <li>
+                <a href="sections/section_5.html">
+                    <p>Leaves on a Stream Metaphor</p>
+                </a>
+            </li>
+
+
+            <li data-role="divider" data-theme="a">Summary of Defusion Strategies</li>
+            <li>
+                <a href="sections/section_4.html">
+                    <p>Defusion Strategies </p>
+                </a>
+            </li>
+            <li>
+                <a href="sections/section_5.html">
+                    <p>Defusion Strategies Cont’d</p>
+                </a>
+            </li>
+
         </ul>
     </div>
+
 
     <div data-role="header" style='position:absolute;top: 0;width:100%;'>
         <div data-role="navbar">
