--- a/backup.html
+++ b/backup.html
@@ -1,3 +1,86 @@
+    
+<ul data-role="listview" data-theme="b">
+    <li data-role="list-divider" data-theme="f">
+         <h1 style="color: white;">Menú</h1> 
+    </li>
+    <li> <a href="#incio" data-transition="fade" data-role="list-divider">
+              Section 1
+            </a>
+
+    </li>
+    <div data-role="collapsible" data-theme="b" data-inset="false" data-content-theme="d"
+    data-iconpos="right" style="border: 0px">
+         <h3 style="margin-top: 0px !important;margin-bottom: 0px !important;">Section 2</h3>
+
+        <ul data-role="listview" data-divider-theme="d" data-inset="false">
+            <li data-role="list-divider" role="heading">Section 2.1</li>
+            <li data-theme="c"> <a data-icon="gear" href="#ajustes" data-transition="fade">Section 2.1.1</a>
+            </li>
+            <li data-theme="c"> <a data-icon="gear" href="#ajustes" data-transition="fade">Section 2.1.2</a>
+            </li>
+            <li data-theme="c"> <a data-icon="gear" href="#ajustes" data-transition="fade">Section 2.1.3</a>
+            </li>
+            <li data-role="list-divider" role="heading">Section 2.2</li>
+            <li data-theme="c"> <a data-icon="gear" href="#ajustes" data-transition="fade">Section 2.2.1</a>
+            </li>
+            <li data-theme="c"> <a data-icon="gear" href="#ajustes" data-transition="fade">Section 2.2.2</a>
+            </li>
+            <li data-theme="c"> <a data-icon="gear" href="#ajustes" data-transition="fade">Section 2.2.3</a>
+            </li>
+        </ul>
+    </div>
+    <li> <a href="#alarmas" data-transition="fade" data-role="list-divider">
+              Section 3
+            </a>
+
+    </li>
+    <li> <a href="#logs" data-transition="fade" data-role="list-divider">
+              Section 4
+            </a>
+
+    </li>
+</ul>
+
+
+<div data-role="popup" id="popupContent" data-theme="a">
+    <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
+
+    <ul data-role="listview" data-theme="a">
+        <li data-role="list-divider" data-theme="a">
+            <center><h1>  Content  </h1></center> 
+        </li>
+
+        <div data-role="collapsible" data-theme="c" data-content-theme="a" data-iconpos="right">
+            <h3>What is Social Anxiety? </h3>
+            <ul data-role="listview" data-divider-theme="a" >
+                <li data-theme="a"> <a href="#ajustes">Introduction</a></li>
+                <li data-theme="a"> <a href="#ajustes">Defining Shyness and Social Anxiety</a></li>
+                <li data-theme="a"> <a href="#ajustes">Fusion vs. Defusion</a></li>
+            </ul>
+        </div>
+
+        <div data-role="collapsible" data-theme="c" data-content-theme="a" data-iconpos="right">
+            <h3>Anxious Thinking</h3>
+            <ul data-role="listview" data-divider-theme="a" >
+                <li data-theme="a"> <a href="#ajustes">Types of Anxious Thoughts</a></li>
+                <li data-theme="a"> <a href="#ajustes">Types of Anxious Thoughts Cont’d</a></li>
+                <li data-theme="a"> <a href="#ajustes">Your Types of Anxious Thinking</a></li>
+            </ul>
+        </div>
+
+        <div data-role="collapsible" data-theme="c" data-content-theme="a" data-iconpos="right">
+            <h3>Defusing from Your Socially Anxious Thoughts</h3>
+            <ul data-role="listview" data-divider-theme="a" >
+                <li data-theme="a"> <a href="#ajustes">Defusion Strategies</a></li>
+                <li data-theme="a"> <a href="#ajustes">Defusion Strategies Cont’d</a></li>
+            </ul>
+        </div>
+
+</div>
+
+
+
+
     <div data-role="popup" id="popupContent" data-theme="a">
         <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
         <ul data-role="listview" data-inset="true" style="min-width:210px;" data-theme="a">
@@ -76,5 +159,56 @@
             </li>
 
 
+            <li data-role="divider" data-theme="a">Summary of Defusion Strategies</li>
+            <li>
+                <a href="sections/section_4.html">
+                    <p>Defusion Strategies </p>
+                </a>
+            </li>
+            <li>
+                <a href="sections/section_5.html">
+                    <p>Defusion Strategies Cont’d</p>
+                </a>
+            </li>
+
+        </ul>
+    </div>
+
+
+        <div data-role="popup" id="popupContent" data-theme="a">
+        <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
+        <ul data-role="listview" data-inset="true" style="min-width:210px;" data-theme="a">
+            <li data-role="divider" data-theme="a">Content</li>
+            <li>
+                <a href="sections/section_1.html">
+                    <p>Defining Shyness and Social Anxiety</p>
+                </a>
+            </li>
+            <li>
+                <a href="sections/section_2.html">
+                    <p>Types of Anxious Thinking</p>
+                </a>
+            </li>
+            <li>
+                <a href="sections/section_3.html">
+                    <p>Defusing from Your Social-Anxiety Thoughts</p>
+                </a>
+            </li>
+            <li>
+                <a href="sections/section_4.html">
+                    <p>Developing Awareness of Thinking</p>
+                </a>
+            </li>
+            <li>
+                <a href="sections/section_5.html">
+                    <p>Summary of Defusion Strategies</p>
+                </a>
+            </li>
+            <li>
+
+                <a href="sections/section_6.html">
+                    <p>Conclusion</p>
+                </a>
+            </li>
         </ul>
     </div>
