--- a/index.html
+++ b/index.html
@@ -67,99 +67,60 @@
             </li>
     </div>
 
-  <div data-role="popup" id="popupContent" data-theme="a">
-        <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
-        <ul data-role="listview" data-inset="true" style="min-width:210px;" data-theme="a">
+<div data-role="popup" id="popupContent" data-theme="a">
+    <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
 
-            <li data-role="divider" data-theme="a">What is Social Anxiety? </li>
-            <li>
-                <a href="sections/section_1.html">
-                    <p>Introduction</p>
-                </a>
-            </li>
-            <li>
-                <a href="sections/section_2.html">
-                    <p>Defining Shyness and Social Anxiety</p>
-                </a>
-            </li>
-            <li>
-                <a href="sections/section_3.html">
-                    <p>Fusion vs. Defusion</p>
-                </a>
-            </li>
+    <ul data-role="listview" data-theme="a">
+        <li data-role="list-divider" data-theme="a">
+            <center><h1>  Content  </h1></center> 
+        </li>
 
-            <li data-role="divider" data-theme="a">Anxious Thinking</li>
-            <li>
-                <a href="sections/section_4.html">
-                    <p>Types of Anxious Thoughts</p>
-                </a>
-            </li>
-            <li>
-                <a href="sections/section_5.html">
-                    <p>Types of Anxious Thoughts Cont’d</p>
-                </a>
-            </li>
-            <li>
-                <a href="sections/section_6.html">
-                    <p>Your Types of Anxious Thinking</p>
-                </a>
-            </li>
+        <div data-role="collapsible" data-theme="c" data-content-theme="a" data-iconpos="right">
+            <h3>What is Social Anxiety? </h3>
+            <ul data-role="listview" data-divider-theme="a" >
+                <li data-theme="a"> <a href="#ajustes">Introduction</a></li>
+                <li data-theme="a"> <a href="#ajustes">Defining Shyness and Social Anxiety</a></li>
+                <li data-theme="a"> <a href="#ajustes">Fusion vs. Defusion</a></li>
+            </ul>
+        </div>
 
-            <li data-role="divider" data-theme="a">Defusing from Your Socially Anxious Thoughts</li>
-            <li>
-                <a href="sections/section_4.html">
-                    <p>Defusion Strategies </p>
-                </a>
-            </li>
-            <li>
-                <a href="sections/section_5.html">
-                    <p>Defusion Strategies Cont’d</p>
-                </a>
-            </li>
+        <div data-role="collapsible" data-theme="c" data-content-theme="a" data-iconpos="right">
+            <h3>Anxious Thinking</h3>
+            <ul data-role="listview" data-divider-theme="a" >
+                <li data-theme="a"> <a href="#ajustes">Types of Anxious Thoughts</a></li>
+                <li data-theme="a"> <a href="#ajustes">Types of Anxious Thoughts Cont'd</a></li>
+                <li data-theme="a"> <a href="#ajustes">Your Types of Anxious Thinking</a></li>
+            </ul>
+        </div>
 
-            <li data-role="divider" data-theme="a">Awareness of Thinking</li>
-            <li>
-                <a href="sections/section_4.html">
-                    <p>Developing Your Awareness of Thinking</p>
-                </a>
-            </li>
-            <li>
-                <a href="sections/section_5.html">
-                    <p>Exercise 5: Awareness of Thinking</p>
-                </a>
-            </li>
-            <li>
-                <a href="sections/section_5.html">
-                    <p>Thought Watching Metaphors</p>
-                </a>
-            </li>
-            <li>
-                <a href="sections/section_5.html">
-                    <p>Waterfall Metaphor </p>
-                </a>
-            </li>
-            <li>
-                <a href="sections/section_5.html">
-                    <p>Leaves on a Stream Metaphor</p>
-                </a>
-            </li>
+        <div data-role="collapsible" data-theme="c" data-content-theme="a" data-iconpos="right">
+            <h3>Defusing from Your Socially Anxious Thoughts</h3>
+            <ul data-role="listview" data-divider-theme="a" >
+                <li data-theme="a"> <a href="#ajustes">Defusion Strategies</a></li>
+                <li data-theme="a"> <a href="#ajustes">Defusion Strategies Cont’d</a></li>
+            </ul>
+        </div>
 
+        <div data-role="collapsible" data-theme="c" data-content-theme="a" data-iconpos="right">
+            <h3>Awareness of Thinking</h3>
+            <ul data-role="listview" data-divider-theme="a" >
+                <li data-theme="a"> <a href="#ajustes">Developing Your Awareness of Thinking</a></li>
+                <li data-theme="a"> <a href="#ajustes">Exercise 5: Awareness of Thinking</a></li>
+                <li data-theme="a"> <a href="#ajustes">Thought Watching Metaphors</a></li>
+                <li data-theme="a"> <a href="#ajustes">Waterfall Metaphor</a></li>
+                <li data-theme="a"> <a href="#ajustes">Leaves on a Stream Metaphor</a></li>
+            </ul>
+        </div>
 
-            <li data-role="divider" data-theme="a">Summary of Defusion Strategies</li>
-            <li>
-                <a href="sections/section_4.html">
-                    <p>Defusion Strategies </p>
-                </a>
-            </li>
-            <li>
-                <a href="sections/section_5.html">
-                    <p>Defusion Strategies Cont’d</p>
-                </a>
-            </li>
+        <div data-role="collapsible" data-theme="c" data-content-theme="a" data-iconpos="right">
+            <h3>Summary of Defusion Strategies</h3>
+            <ul data-role="listview" data-divider-theme="a" >
+                <li data-theme="a"> <a href="#ajustes">Defusion Strategies</a></li>
+                <li data-theme="a"> <a href="#ajustes">Defusion Strategies Cont'd</a></li>
 
-        </ul>
-    </div>
-
+            </ul>
+        </div>
+</div>
 
     <div data-role="header" style='position:absolute;top: 0;width:100%;'>
         <div data-role="navbar">
