--- a/sections/section_4_2.html
+++ b/sections/section_4_2.html
@@ -9,24 +9,14 @@
 
     <div data-role="page" data-position="fixed">
         <div data-role="header">
-            <h1>Developing Awareness of Thinking</h>
+            <h1>Exercise 6: Awareness of Thinking</h>
         </div>
         <!-- /header -->
 
         <div data-role="content">
-            <h3> Developing Awareness of Thinking:  </h3>
-            <p>
-                At times, we lack awareness of the thoughts that regulate our behavior. Emily told us, "I'm not sure why I don't speak up in class; I just don't." Her actions seemed automatic to her, not influenced by any particular thoughts.
-                <br>
-                <br> 
-                You can't defuse from unhelpful thoughts that you aren't aware of. Sometimes, just "sitting with" a situation can be helpful for identifying fused thoughts. We asked Emily to sit quietly for a few minutes and notice any thoughts that arose while she imagined a typical class discussion. She was able to get in touch with fearful thoughts of not being able to articulate her ideas to her classmates. Thought after thought appeared in her mind about being incompetent and not fitting in. She found it helpful to notice them as simply thoughts.
-                <br>   
-                <br> 
-                Try "sitting with" the image of one of your feared social situations, with the assistance of the following exercise.
-            </p>
             <h2>Exercise 6: Awareness of Thinking</h2>
             <p>
-                The purpose of this exercise is to <b><i>Develop Awareness of Thinking</b></i>, to watch your mind generating thoughts without getting caught up in the contents of those thoughts.
+                The purpose of these exercises is to <b><i>Develop Awareness of Thinking</b></i>, to watch your mind generating thoughts without getting caught up in the contents of those thoughts.
                 <br>
                 <br> 
                 Start by settling into a comfortable sitting position as you bring your attention to the breath, following it as it enters and leaves the body, coming and going of its own accord, allowing the breath to find its own rhythm, not needing to control it in any way.
@@ -49,32 +39,6 @@
                 <br> 
                 What was your experience of that exercise? Did you uncover thoughts that were lurking beneath your awareness, possibly steering you away from your values? If so, you may find it helpful to continue to simply watch those thoughts on your own.
             </p>
-            <h3> Observing Your Thoughts: </h3>
-            <p>
-                Here are a few more ideas for thought watching.
-                <br>
-                <br> 
-                <b><i>Thoughts as waterfall metaphor. </i></b>
-                Imagine that you are standing under a strong waterfall. The water is beating down on your hair and skin, and soaking your clothing. The force of the water is pushing you down. You are so completely immersed in the falling water that you almost feel as if you were a part of it. 
-                <br>
-                <br> 
-                Now imagine stepping out of the waterfall and standing beside it. You can see the water cascading down and can perhaps feel a fine mist on your skin. You can also see that you are separate from the water; you are not the water.
-                <br>
-                <br> 
-                Practice stepping out from the waterfall of your thoughts and watching them, instead of being pushed around and dragged down by them.
-                <br>
-                <br> 
-                <b><i>Leaves on a stream. </i></b>
-                Imagine that you are standing beside a stream that has a large maple tree at the edge. It's a glorious fall day and the leaves are gradually dropping into the stream. Each leaf has one of your thoughts written on it. 
-                <br>
-                <br> 
-                Practice watching as each leaf (thought) drops into the water and floats downstream. The stream may flow slowly, quickly, or even come to a complete stop at times. Your task is to simply watch whatever happens. You can also do this exercise online at <a href="http://www.thinkmindfully.com/try-it">www.thinkmindfully.com/try-it.</a> 
-                <br>
-                <br> 
-                <b><i>Clouds in the sky. </i></b>
-                This is similar to the previous metaphor except that your thoughts are written on passing clouds.
-
-            </p>
         </div>
         <!-- /content -->
 
@@ -83,13 +47,13 @@
             <div data-role="navbar" data-iconpos="right">
                 <ul>
                     <li>
-                        <a href="section_3.html">Previous</a>
+                        <a href="section_4_1.html">Previous</a>
                     </li>
                     <li>
                         <a href="../index.html">Home</a>
                     </li>
                     <li>
-                        <a href="section_5.html">Continue</a>
+                        <a href="section_4_3.html">Continue</a>
                     </li>
                 </ul>
             </div>
@@ -102,3 +66,4 @@
 
 </body>
 </html>
+
