--- a/index.html
+++ b/index.html
@@ -25,6 +25,23 @@
     <div class='test'>
     </div>
 
+    <div data-role="header" style='position:absolute;bottom: 0;width:100%;'>
+        <div data-role="navbar">
+            <ul>
+                <li>
+                    <a href="#popupContent" data-rel="popup" data-position-to="window">Content</a>
+                </li>
+                <li>
+                    <a href="#popupProgress" data-rel="popup" data-position-to="window">Progress</a>
+                </li>
+                <li>
+                    <a href="#popupExercises" data-rel="popup" data-position-to="window">Exercises</a>
+                </li>
+            </ul>
+        </div><!-- /navbar -->
+    </div>
+    <!-- /footer -->
+
     <div data-role="popup" id="popupExercises" data-theme="a">
         <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
             <a href="#" onclick="clear_Storage();" data-role="button">Clear Storage</a>
@@ -78,26 +95,26 @@
         <div data-role="collapsible" data-theme="c" data-content-theme="a" data-iconpos="right">
             <h3>What is Social Anxiety? </h3>
             <ul data-role="listview" data-divider-theme="a" >
-                <li data-theme="a"> <a href="#ajustes">Introduction</a></li>
-                <li data-theme="a"> <a href="#ajustes">Defining Shyness and Social Anxiety</a></li>
-                <li data-theme="a"> <a href="#ajustes">Fusion vs. Defusion</a></li>
+                <li data-theme="a"> <a href="sections/section_1_1.html">Introduction</a></li>
+                <li data-theme="a"> <a href="sections/section_1_2.html">Defining Shyness and Social Anxiety</a></li>
+                <li data-theme="a"> <a href="sections/section_1_3.html">Fusion vs. Defusion</a></li>
             </ul>
         </div>
 
         <div data-role="collapsible" data-theme="c" data-content-theme="a" data-iconpos="right">
             <h3>Anxious Thinking</h3>
             <ul data-role="listview" data-divider-theme="a" >
-                <li data-theme="a"> <a href="#ajustes">Types of Anxious Thoughts</a></li>
-                <li data-theme="a"> <a href="#ajustes">Types of Anxious Thoughts Cont'd</a></li>
-                <li data-theme="a"> <a href="#ajustes">Your Types of Anxious Thinking</a></li>
+                <li data-theme="a"> <a href="sections/section_2_1.html">Types of Anxious Thoughts</a></li>
+                <li data-theme="a"> <a href="sections/section_2_2.html">Types of Anxious Thoughts Cont'd</a></li>
+                <li data-theme="a"> <a href="sections/section_2_3.html">Your Types of Anxious Thinking</a></li>
             </ul>
         </div>
 
         <div data-role="collapsible" data-theme="c" data-content-theme="a" data-iconpos="right">
             <h3>Defusing from Your Socially Anxious Thoughts</h3>
             <ul data-role="listview" data-divider-theme="a" >
-                <li data-theme="a"> <a href="#ajustes">Defusion Strategies</a></li>
-                <li data-theme="a"> <a href="#ajustes">Defusion Strategies Cont’d</a></li>
+                <li data-theme="a"> <a href="sections/section_3_1.html">Defusion Strategies</a></li>
+                <li data-theme="a"> <a href="sections/section_3_2.html">Defusion Strategies Cont'd</a></li>
             </ul>
         </div>
 
@@ -122,22 +139,7 @@
         </div>
 </div>
 
-    <div data-role="header" style='position:absolute;top: 0;width:100%;'>
-        <div data-role="navbar">
-            <ul>
-                <li>
-                    <a href="#popupContent" data-rel="popup" data-position-to="window">Content</a>
-                </li>
-                <li>
-                    <a href="#popupProgress" data-rel="popup" data-position-to="window">Progress</a>
-                </li>
-                <li>
-                    <a href="#popupExercises" data-rel="popup" data-position-to="window">Exercises</a>
-                </li>
-            </ul>
-        </div><!-- /navbar -->
-    </div>
-    <!-- /footer -->
+
 
 
 
