--- a/sections/section_3_1.html
+++ b/sections/section_3_1.html
@@ -48,7 +48,7 @@
             <p>
                 A fun variation on naming the type of thinking is to give actual names to your thoughts, perhaps greeting or chatting with them as you would with your friends 
                 <br>
-                <b>EXAMPLE:</b> <i>Hello, Mind-Reading Randy; Thanks for showing up, "Shoulding" Shirley; Interesting comments, Negative Nelly.</i>
+                <b>e.g.</b> <i>Hello, Mind-Reading Randy; Thanks for showing up, "Shoulding" Shirley; Interesting comments, Negative Nelly.</i>
             </p>
 
         </div>
