--- a/sections/section_4_2.html
+++ b/sections/section_4_2.html
@@ -39,6 +39,13 @@
                 <br> 
                 What was your experience of that exercise? Did you uncover thoughts that were lurking beneath your awareness, possibly steering you away from your values? If so, you may find it helpful to continue to simply watch those thoughts on your own.
             </p>
+            <a href="section_4_3.html" data-role="button" data-inline="true" data-transition="fade">Movie Theatre Metaphor</a>
+            <br>
+            <a href="section_4_4.html" data-role="button" data-inline="true" data-transition="fade">Thoughts as waterfall Metaphor</a>
+            <br>
+            <a href="section_4_5.html" data-role="button" data-inline="true" data-transition="fade">Leaves on a stream Metaphor</a>
+            <br>
+            <a href="section_4_6.html" data-role="button" data-inline="true" data-transition="fade">Clouds in the sky Metaphor</a>
         </div>
         <!-- /content -->
 
@@ -53,7 +60,7 @@
                         <a href="../index.html">Home</a>
                     </li>
                     <li>
-                        <a href="section_4_3.html">Continue</a>
+                        <a href="section_5.html">Continue</a>
                     </li>
                 </ul>
             </div>
