--- a/sections/section_5.html
+++ b/sections/section_5.html
@@ -15,6 +15,9 @@
 
         <div data-role="content" id='section_5_body'>
             <p>
+                You have now been introduced to the basic skills of the “defusing From Anxious Thoughts” approach to social anxiety and shyness. 
+                <br>
+                Here is a list of the defusion strategies you have learnt over the past few sections. 
                 <b><i>I am having the thought that:</i></b> For example, <i>I am having the thought that I'm making a fool of myself.</i>
                 <br>
                 <br>
@@ -33,10 +36,12 @@
                 <i><b>Defuse with Dr. Phil:</b> How's that thought working for you?</i>
                 <br>
                 <br>
-                <b><i>Awareness of thinking:</i></b> Listen to the audio download (at www.newharbinger.com/20801) or sit silently with your thoughts.
+                <b><i>Awareness of thinking:</i></b> Sit silently with your thoughts.
                 <br>
                 <br>
-                <b><i>Observe your thoughts:</i></b> Use the waterfall metaphor, leaves on a stream, or clouds in the sky.
+                <b><i>Observe your thoughts:</i></b> Use the waterfall, leaves on a stream, or clouds in the sky <a href="section_4_2.html" data-role="button" data-inline="true" >metaphors</a>.
+                Over the next several days, try out all of the defusion strategies. Record the anxious thought you were having (e.g. <i>I'm boring</i>), the defusion strategy you tried using (e.g. <i>I am having the thought that I’m boring</i>), and any positive results (e.g. <i>I had the thought and still contributed to a conversation</i>) in the following space provided.";
+
             </p>
 
             <div id='exercise_7'></div>
@@ -44,6 +49,9 @@
                 document.getElementById('exercise_7').innerHTML = exercise_7;
                 loadExercise_7();
             </script>
+            <p>
+                As you sample these strategies, keep track of the ones that you find most helpful on your social-anxiety playing field. We have found that clients vary tremendously concerning which strategies they like and find useful. Clearly, "no single size fits all". However, we hope that some of these strategies will be a useful tool to help you "get out of your mind and into your life"! 
+            </p>
         </div>
         <!-- /content -->
 
@@ -52,13 +60,13 @@
             <div data-role="navbar" data-iconpos="right">
                 <ul>
                     <li>
-                        <a href="section_4.html">Previous</a>
+                        <a href="section_4_2.html">Previous</a>
                     </li>
                     <li>
                         <a href="../index.html">Home</a>
                     </li>
                     <li>
-                        <a href="section_6.html">Continue</a>
+                        <a href="#" class="ui-btn-active ui-state-persist">Continue</a>
                     </li>
                 </ul>
             </div>
