--- a/index.html
+++ b/index.html
@@ -121,19 +121,15 @@
         <div data-role="collapsible" data-theme="c" data-content-theme="a" data-iconpos="right">
             <h3>Awareness of Thinking</h3>
             <ul data-role="listview" data-divider-theme="a" >
-                <li data-theme="a"> <a href="#ajustes">Developing Your Awareness of Thinking</a></li>
-                <li data-theme="a"> <a href="#ajustes">Exercise 5: Awareness of Thinking</a></li>
-                <li data-theme="a"> <a href="#ajustes">Thought Watching Metaphors</a></li>
-                <li data-theme="a"> <a href="#ajustes">Waterfall Metaphor</a></li>
-                <li data-theme="a"> <a href="#ajustes">Leaves on a Stream Metaphor</a></li>
+                <li data-theme="a"> <a href="sections/section_4_1.html">Developing Your Awareness of Thinking</a></li>
+                <li data-theme="a"> <a href="sections/section_4_2.html">Exercise 5: Awareness of Thinking</a></li>
             </ul>
         </div>
 
         <div data-role="collapsible" data-theme="c" data-content-theme="a" data-iconpos="right">
             <h3>Summary of Defusion Strategies</h3>
             <ul data-role="listview" data-divider-theme="a" >
-                <li data-theme="a"> <a href="#ajustes">Defusion Strategies</a></li>
-                <li data-theme="a"> <a href="#ajustes">Defusion Strategies Cont'd</a></li>
+                <li data-theme="a"> <a href="sections/section_5.html">Summary of Defusion Strategies</a></li>
 
             </ul>
         </div>
