--- a/sections/section_4_4.html
+++ b/sections/section_4_4.html
@@ -7,7 +7,7 @@
 
 <body>
 
-    <div class='background_movietheater'>
+    <div class='background_waterfall'>
     </div>
 
     <div data-role="header" style='position:absolute;bottom: 0;width:100%;'>
@@ -28,7 +28,7 @@
     <!-- /footer -->
 
 <script>
-    $('.background_movietheater').height(getRealContentHeight());
+    $('.background_waterfall').height(getRealContentHeight());
 </script>
 </body>
 </html>
