--- a/exercises/exercise_6.html
+++ b/exercises/exercise_6.html
@@ -3,15 +3,53 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+</head>
+
 <body>
+
     <div data-role="page" data-position="fixed">
         <div data-role="header">
             <h1>Exercise 6: Awareness of Thinking</h>
         </div>
         <!-- /header -->
+
         <div data-role="content">
+            <h2>Exercise 6: Awareness of Thinking</h2>
+            <p>
+                The purpose of these exercises is to <b><i>Develop Awareness of Thinking</b></i>, to watch your mind generating thoughts without getting caught up in the contents of those thoughts.
+                <br>
+                <br> 
+                Start by settling into a comfortable sitting position as you bring your attention to the breath, following it as it enters and leaves the body, coming and going of its own accord, allowing the breath to find its own rhythm, not needing to control it in any way.
+                <br>
+                <br> 
+                If you would like to work with a specific social situation, bring it to mind now, getting a clear picture of where you are, who you are with, and what you are doing.
+                <br>
+                <br> 
+                Whenever you are ready, gently shift your awareness to thinking-to paying attention to thoughts as events in the mind. As best you can, bring your awareness to thoughts as they arise in the mind, passing through the space of the mind, and eventually disappearing. There is no need to censor or encourage thinking in any direction, simply allowing thoughts to arise naturally, not holding on to thoughts, pushing them away, or analyzing their contents, simply observing thoughts as events in the field of awareness.
+                <br>
+                <br> 
+                It may help to imagine that you are sitting in a movie theater in front of a large blank screen. As thoughts, memories, and mental images appear in your mind, seeing them projected onto the screen, watching each thought for as long as it remains on the screen.
+                <br>
+                <br> 
+                Thoughts may move slowly or quickly across the screen, some dominating the screen more than others. At times, the screen may go blank; at other times it may be completely filled with thoughts. Whatever is on the screen, remaining curious about the process of thinking itself, noticing your ability to be an impartial observer.
+                <br>
+                <br> 
+                At times you may lose touch with your awareness of thinking, fusing with your thoughts, getting caught up in one of the stories unfolding on the screen. When that happens, returning to the feeling of the breath, not as a way to get away from thoughts or make the mind blank, but as a way to anchor yourself in the present moment, as you escort your mind back to its seat, returning to watching your thoughts coming and going.
+                <br>
+                <br> 
+                What was your experience of that exercise? Did you uncover thoughts that were lurking beneath your awareness, possibly steering you away from your values? If so, you may find it helpful to continue to simply watch those thoughts on your own.
+            </p>
+            <a href="../sections/section_4_3.html" data-role="button" data-inline="true" data-transition="fade">Movie Theatre Metaphor</a>
+            <br>
+            <a href="../sections/section_4_4.html" data-role="button" data-inline="true" data-transition="fade">Thoughts as waterfall Metaphor</a>
+            <br>
+            <a href="../sections/section_4_5.html" data-role="button" data-inline="true" data-transition="fade">Leaves on a stream Metaphor</a>
+            <br>
+            <a href="../sections/section_4_6.html" data-role="button" data-inline="true" data-transition="fade">Clouds in the sky Metaphor</a>
         </div>
         <!-- /content -->
+
+
         <div data-role="footer" data-position="fixed">
             <div data-role="navbar" data-iconpos="right">
                 <ul>
@@ -22,7 +60,7 @@
                         <a href="../index.html">Home</a>
                     </li>
                     <li>
-                        <a href="exercise_7.html"onclick="">Continue</a>
+                        <a href="exercise_7.html">Continue</a>
                     </li>
                 </ul>
             </div>
@@ -35,3 +73,4 @@
 
 </body>
 </html>
+
