--- a/index.html
+++ b/index.html
@@ -44,42 +44,43 @@
 
     <div data-role="popup" id="popupExercises" data-theme="a">
         <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
-            <a href="#" onclick="clear_Storage();" data-role="button">Clear Storage</a>
-        <ul data-role="listview" data-inset="true" style="min-width:210px;" data-theme="a">
-            <li data-role="divider" data-theme="a">Exercises</li>
-            <li>
-                <a href="exercises/exercise_1.html">
-                    <p>Exercise 1: Top Feared Social Situations</p>
-                </a>
+        <a href="#" onclick="clear_Storage();" data-role="button">Clear Storage</a>
+
+        <ul data-role="listview" data-theme="a">
+            <li data-role="list-divider" data-theme="a">
+                <center><h1>  Exercises  </h1></center> 
+            </li>
+            <li data-theme="a">
+                <a href="exercises/exercise_1.html">Exercise 1: Top Feared Social Situations</a>
             </li>
             <li>
                 <a href="exercises/exercise_2.html">
-                    <p>Exercise 2: Your Anxious Thoughts</p>
+                    Exercise 2: Your Anxious Thoughts
                 </a>
             </li>
             <li>
                 <a href="exercises/exercise_3.html">
-                    <p>Exercise 3: "Shoulding"</p>
+                    Exercise 3: "Shoulding"
                 </a>
             </li>
             <li>
                 <a href="exercises/exercise_4.html">
-                    <p>Exercise 4: Generating Stories</p>
+                    Exercise 4: Generating Stories
                 </a>
             </li>
             <li>
                 <a href="exercises/exercise_5.html">
-                    <p>Exercise 5: Types of Anxious Thinking</p>
+                    Exercise 5: Types of Anxious Thinking
                 </a>
             </li>
             <li>
                 <a href="exercises/exercise_6.html">
-                    <p>Exercise 6: Awareness of Thinking</p>
+                    Exercise 6: Awareness of Thinking
                 </a>
             </li>
             <li>
                 <a href="exercises/exercise_7.html">
-                    <p>Exercise 7: Defusing from Your Anxious Thoughts</p>
+                    Exercise 7: Defusing from Your Anxious Thoughts
                 </a>
             </li>
     </div>
@@ -122,7 +123,7 @@
             <h3>Awareness of Thinking</h3>
             <ul data-role="listview" data-divider-theme="a" >
                 <li data-theme="a"> <a href="sections/section_4_1.html">Developing Your Awareness of Thinking</a></li>
-                <li data-theme="a"> <a href="sections/section_4_2.html">Exercise 5: Awareness of Thinking</a></li>
+                <li data-theme="a"> <a href="sections/section_4_2.html">Exercise 6: Awareness of Thinking</a></li>
             </ul>
         </div>
 
