--- a/exercises/exercise_1.html
+++ b/exercises/exercise_1.html
@@ -3,6 +3,15 @@
 
 <head>
     <meta name="viewport" content="width=device-width, user-scalable=no" />
+    <link rel="stylesheet" href="../lib/jquery.mobile-1.3.2.min.css" />
+    <link rel="stylesheet" href="../style.css" />
+    <script src="../lib/jquery-2.0.3.min.js"></script>
+    <script>
+        $(document).bind("mobileinit", function () {
+            $.mobile.defaultPageTransition = 'none';
+        });
+    </script>
+    <script src="../lib/jquery.mobile-1.3.2.min.js"></script>
 </head>
 
 <body>
