--- a/backup.html
+++ b/backup.html
@@ -76,6 +76,25 @@
             </ul>
         </div>
 
+        <div data-role="collapsible" data-theme="c" data-content-theme="a" data-iconpos="right">
+            <h3>Awareness of Thinking<</h3>
+            <ul data-role="listview" data-divider-theme="a" >
+                <li data-theme="a"> <a href="#ajustes">Developing Your Awareness of Thinking</a></li>
+                <li data-theme="a"> <a href="#ajustes">Exercise 5: Awareness of Thinking</a></li>
+                <li data-theme="a"> <a href="#ajustes">Thought Watching Metaphors</a></li>
+                <li data-theme="a"> <a href="#ajustes">Waterfall Metaphor</a></li>
+                <li data-theme="a"> <a href="#ajustes">Leaves on a Stream Metaphor</a></li>
+            </ul>
+        </div>
+
+        <div data-role="collapsible" data-theme="c" data-content-theme="a" data-iconpos="right">
+            <h3>Summary of Defusion Strategies<</h3>
+            <ul data-role="listview" data-divider-theme="a" >
+                <li data-theme="a"> <a href="#ajustes">Defusion Strategies</a></li>
+                <li data-theme="a"> <a href="#ajustes">Defusion Strategies Cont’d</a></li>
+
+            </ul>
+        </div>
 </div>
 
 
