--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
 <body>
 
-    <div class='test'>
+    <div class='background_home'>
     </div>
 
-    <div data-role="header" style='position:absolute;bottom: 0;width:100%;'>
+    <div data-role="header" style='position:absolute;bottom: 0;width:100%;height : 38px;'>
         <div data-role="navbar">
             <ul>
                 <li>
@@ -169,7 +169,7 @@
             var content_height = viewport_height;
             return content_height;
         }
-        $('.test').height(getRealContentHeight());
+        $('.background_home').height(getRealContentHeight()-40);
     </script>
 </body>
 
